# moyai

./: .gitignore  LICENSE  README.md  pyproject.toml
moyai/: __init__.py  __main__.py  bot.py  config.py
moyai/plugins/: __init__.py
moyai/plugins/meta/: __init__.py  plugin.py
